--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9.8.8",
     "axios": "^0.27.2",
+    "framer-motion": "^7.3.5",
     "portfolio": "./",
     "postcss": "^7.0.39",
     "react": "^17.0.2",
@@ -21,6 +22,7 @@
     "react-router-dom": "5",
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
+    "swiper": "^6.8.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "web-vitals": "^1.0.1"
   },
