--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "5",
     "react-scripts": "4.0.3",
