--- a/package.json
+++ b/package.json
@@ -4,7 +4,25 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.2",
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/code": "^2.7.0",
+    "@editorjs/delimiter": "^1.2.0",
+    "@editorjs/embed": "^2.5.3",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/image": "^2.6.2",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link": "^2.4.1",
+    "@editorjs/list": "^1.7.0",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/raw": "^2.3.1",
+    "@editorjs/simple-image": "^1.4.1",
+    "@editorjs/table": "^2.0.4",
+    "@editorjs/warning": "^1.2.0",
     "@formspree/react": "^2.2.4",
+    "@mantine/core": "^5.5.5",
+    "@mantine/hooks": "^5.5.5",
+    "@mantine/rte": "^5.5.5",
     "@reduxjs/toolkit": "^1.8.5",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@testing-library/jest-dom": "^5.11.4",
@@ -13,11 +31,14 @@
     "autoprefixer": "^9.8.8",
     "axios": "^0.27.2",
     "framer-motion": "^7.3.5",
+    "html-react-parser": "^3.0.4",
     "portfolio": "./",
     "postcss": "^7.0.39",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-editor-js": "^2.1.0",
     "react-helmet": "^6.1.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.3.1",
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
