--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@editorjs/simple-image": "^1.4.1",
     "@editorjs/table": "^2.0.4",
     "@editorjs/warning": "^1.2.0",
+    "@emotion/cache": "^11.10.3",
     "@formspree/react": "^2.2.4",
     "@mantine/core": "^5.5.5",
     "@mantine/hooks": "^5.5.5",
