--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://codergalib.live",
   "dependencies": {
     "@craco/craco": "^6.4.2",
     "@editorjs/checklist": "^1.3.0",
